# contextql

./: .gitignore  DECISIONS.md  README.md  SPEC.md  WHITEPAPER.md  pyproject.toml
contextql/: README.md  __init__.py  _builder.py  _magic.py  builder.py  cli.py  diagnostics.py  engine.py  errors.py  executor.py  linter.py  parser.py  providers.py  semantic.py  types.py
contextql/adapters/: __init__.py  duckdb_adapter.py
contextql/lsp/: __init__.py  server.py
contextql/providers/: __init__.py  base.py  fraud.py  jira.py  priority.py
demo/: Dockerfile.constrained  constrained_demo.py  docker-compose.constrained.yml  docker-compose.yml  run-constrained.sh
docs/: LANGUAGE_SERVER_SPEC.md  TOOLING.md
docs/architecture/: CONTEXT_RESOLUTION_PLANE.md
examples/: context_showcase.py  demo.py  federation_demo.py  killer_demo.py  lint_demo.py  procurement_showcase.py
grammar/: contextql.ebnf  contextql.lark
tests/: conftest.py  test_builder.py  test_diagnostics.py  test_executor.py  test_federation_integration.py  test_grammar_extensions.py  test_identity_map.py  test_linter.py  test_lsp.py  test_mcp_remote.py  test_parser.py  test_providers_package.py  test_result.py  test_semantic.py
vscode-contextql/: extension.js  package.json
