[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextql"
version = "0.1.0"
description = "A context-native query language for operational intelligence"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Anton du Plessis" },
]
dependencies = [
    "lark>=1.1",
]

[project.optional-dependencies]
lsp = [
    "pygls>=1.1",
]
dev = [
    "pytest>=7.0",
]

[project.scripts]
contextql-lsp = "contextql.lsp.server:start"

[tool.pytest.ini_options]
testpaths = ["tests"]
